--- a/src/components/Home/Main/Main.scss
+++ b/src/components/Home/Main/Main.scss
@@ -150,6 +150,10 @@
     padding-bottom: 7px;
 }
 
+.main__right-cards {
+    width: 100%;
+}
+
 @media (max-width: 900px) {
     .main__left {
         display: none;
