--- a/src/components/Shop/ShopHeader/ShopHeader.scss
+++ b/src/components/Shop/ShopHeader/ShopHeader.scss
@@ -31,7 +31,8 @@
     width: 100%;
     @extend %flex_center;
     justify-content: space-between;
-    height: 444px;
+    min-height: 444px;
+    gap: 10px;
 }
 
 .header__left-sm {
@@ -45,7 +46,9 @@
     background: var(--colorFB);
     img {
         width: 100%;
+        max-height: 100%;
         mix-blend-mode: multiply;
+        object-fit: cover;
         cursor: pointer;
     }
 }
@@ -63,9 +66,10 @@
     height: 100%;
     img {
         cursor: pointer;
+        object-fit: contain;
         mix-blend-mode: multiply;
         width: 100%;
-        height: 100%;
+        max-height: 444px;
     }
 }
 
@@ -79,7 +83,8 @@
 .header__right-title {
     font-size: 28px;
     font-weight: 700;
-    color: var(--color3D);   
+    color: var(--color3D);  
+    text-transform: capitalize; 
 }
 
 .header__right-price {
