--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -195,6 +195,10 @@
 }
 
 @media (max-width: 840px) {
+    .nav__search {
+        width: 80%;
+        left: 10%;
+    }
   .navbar__list {
     display: none;
   }
