--- a/src/components/Home/Cards/Card/Card.scss
+++ b/src/components/Home/Cards/Card/Card.scss
@@ -30,7 +30,7 @@
     position: relative;
     background: #FBFBFB;
     width: 100%;
-    height: 200px;
+    height: 220px;
     position: relative;
     border-radius: 6px;
     overflow: hidden;
@@ -49,14 +49,16 @@
     }
 }
     .heart__outline, .heart__regular {
-        position: absolute;
-        top: 5px;
-        right: 5px;
-        z-index: 2;
         color: var(--colorGreen);
         font-size: 20px;
         cursor: pointer;
         transition: .3s all;
+    }
+    .heart {
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        z-index: 2;
     }
 
 .liked {
@@ -100,11 +102,11 @@
 .shop_card__footer {
     padding: 12px;
     h1 {
-        font-size: 16px;
+        font-size: 14px;
         font-weight: 400;
     }
     h3 {
-        font-size: 18px;
+        font-size: 16px;
         color: var(--colorGreen);
         font-weight: 600;
     }
@@ -134,7 +136,7 @@
         width: 100%;
     }
     .shop_card__img {
-        height: 120px;
+        // height: 120px;
         img {
             width: 100%;
             height: 100%;
