--- a/src/components/Home/Slider/Slider.scss
+++ b/src/components/Home/Slider/Slider.scss
@@ -1,4 +1,3 @@
-/* ImageSlider.css */
 * {
   padding: 0;
   margin: 0;
@@ -178,6 +177,37 @@ button.slick-arrow.slick-prev {
   }
   }
 }
+
+@media (max-width: 600px) {
+  .slider__img {
+    width: 100%;
+    border-radius: 0;
+    border: none;
+    filter: brightness(0.5);
+  }
+  .slider__left {
+    width: 100%;
+    z-index: 2;
+    justify-content: center;
+    border-radius: 10px;
+    a {
+      width: 100%;
+    }
+  }
+  .slider__img {
+    border-radius: 10px;
+  }
+  .slider__title,.slider__subtitle,.slider__top {
+    color: aliceblue;
+  }
+  .slider {
+    border-radius: 10px;
+    overflow: hidden;
+    .slider__card {
+      width: 90%;
+    }
+  }
+} 
 
 @media (max-width: 447px) {
   .slider__top {
