--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,11 @@
     padding: 20px;
   }
 }
+@media (max-width: 769px) {
+  .home {
+    padding-bottom: 100px;
+  }
+}
 
 img {
   object-fit: cover;
