--- a/src/components/Home/Cards/Cards.scss
+++ b/src/components/Home/Cards/Cards.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: repeat(6, auto);
     gap: 20px;
     // justify-content: space-between;
     // align-content: space-between;
@@ -28,6 +28,22 @@
 }
 
 @media (max-width: 1385px) {
+    .shops {
+    grid-template-columns: repeat(5, auto);
+    // max-width: 850px;
+    width: 100%;
+    }
+}
+
+@media (max-width: 1000px) {
+    .shops {
+    grid-template-columns: repeat(4, auto);
+    // max-width: 850px;
+    width: 100%;
+    }
+}
+
+@media (max-width: 750px) {
     .shops {
     grid-template-columns: repeat(3, auto);
     max-width: 850px;
