--- a/src/components/Shop/ShopHeader/ShopHeader.scss
+++ b/src/components/Shop/ShopHeader/ShopHeader.scss
@@ -76,6 +76,7 @@
 //header__right
 
 .header__right {
+    width: 80%;
     @extend %flex_col;
     align-items: flex-start;
     gap: 15px;
@@ -237,6 +238,9 @@
         flex-direction: column-reverse;
         min-height: 400px;
         height: 100%;
+    }
+    .header__right {
+        width: 100%;
     }
     .header__left-sm {
         flex-direction: row;
